# opencc-jieba-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MSRV-1.75.0-GUIDE.md  README.md  test_opencc_jieba_rs.py
.github/workflows/: build_capi_artifacts.yml  build_osx_universal_artifact.yml  release.yml  rust.yml
capi/: OpenccJiebaHelper.hpp  opencc_jieba_capi.h
capi/demo-linux/: build..txt  opencc_jieba_capi.h  use_opencc_jieba_c  use_opencc_jieba_c.c  use_opencc_jieba_cpp  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut  use_opencc_jieba_cut.cpp  use_opencc_jieba_keyword_extract  use_opencc_jieba_keyword_extract.cpp  use_opencc_jieba_keyword_weight  use_opencc_jieba_keyword_weight_c  use_opencc_jieba_keyword_weight_c.c
capi/demo-macos/: build..txt  use_opencc_jieba_c  use_opencc_jieba_c.c  use_opencc_jieba_cpp  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut.cpp  use_opencc_jieba_keyword_weight.cpp
capi/demo-win/: build..txt  opencc_jieba_capi.dll.lib  opencc_jieba_capi.h  use_opencc_jieba_c.c  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut.cpp  use_opencc_jieba_keyword_extract.cpp  use_opencc_jieba_keyword_weight.cpp  use_opencc_jieba_keyword_weight_c.c
capi/demo-win7/: MakefileMsvc  build..txt  opencc_jieba_capi.dll.lib  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut.cpp  use_opencc_jieba_keyword_weight.cpp
capi/demo-win7x32/: Makefile  MakefileGcc  MakefileMsvc  opencc_jieba_capi.dll.lib  use_opencc_jieba_cpp.cpp  use_opencc_jieba_keyword_extract.cpp  use_opencc_jieba_keyword_weight_c.c
capi/demo/linux-x64/: build..txt  use_opencc_jieba_c.c  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut  use_opencc_jieba_keyword_extract  use_opencc_jieba_keyword_extract.cpp  use_opencc_jieba_keyword_weight  use_opencc_jieba_keyword_weight.cpp  use_opencc_jieba_keyword_weight_c
capi/demo/macos-x64/: Makefile  build..txt  use_opencc_jieba_c  use_opencc_jieba_c.c  use_opencc_jieba_cpp  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut  use_opencc_jieba_keyword_extract  use_opencc_jieba_keyword_extract.cpp  use_opencc_jieba_keyword_weight  use_opencc_jieba_keyword_weight_c  use_opencc_jieba_keyword_weight_c.c
capi/demo/win-x64/: Makefile  opencc_jieba_capi.dll.lib  opencc_jieba_capi.h  use_opencc_jieba_cpp.cpp  use_opencc_jieba_cut.cpp  use_opencc_jieba_keyword_extract.cpp
capi/demo/win7-x86/: build..txt  opencc_jieba_capi.dll.lib  use_opencc_jieba_c.c
capi/include/: OpenccJiebaHelper.hpp  opencc_jieba_capi.h
capi/opencc_jieba_capi/: Cargo.toml  build.rs
capi/opencc_jieba_capi/src/: lib.rs
dicts/: HKVariants.txt  HKVariantsRev.txt  JPVariantsRev.txt  STCharacters.txt  STPhrases.txt  TSCharacters.txt  TSPhrases.txt  TWPhrases.txt  TWPhrasesRev.txt  TWVariants.txt  TWVariantsRev.txt  TWVariantsRevPhrases.txt
python/opencc_jieba_rs/: __main__.py  office_helper.py  opencc_jieba_capi.h  opencc_jieba_rs.py  test_opencc_jieba_rs.py
scripts/: validate_jieba_dict.ps1
src/: OneDay.txt  Rus.txt  TestZhoCheck.txt  dictionary_lib.rs  keyword.rs  lib.rs  opencc_config.rs  zho_dictionary.rs
src/dictionary_lib/: dict_map.rs  mod.rs
src/dictionary_lib/dicts/: STCharacters.txt  STPhrases.txt  TSCharacters.txt  TSPhrases.txt  dict_hans_hant.txt.zst  dictionary.json  dictionary.json.zst
src/dicts/: STCharacters.txt  STPhrases.txt  TSPhrases.txt
tests/: opencc-jieba-rs-test.rs  opencc-rs-test.rs  split_string_ranges_test.rs
tests/dicts/: user_dict.txt  user_dict2.txt
tools/dict-generate/: Cargo.toml
tools/dict-generate/src/: main.rs
tools/opencc-clip-jieba/: Cargo.toml
tools/opencc-clip-jieba/src/: main.rs
tools/opencc-jieba/: Cargo.toml
tools/opencc-jieba/src/: main.rs
tools/opencc-jieba/src/office_converter/: converter.rs
