workspace = { members = [ "capi/opencc_jieba_capi","tools/opencc-clip-jieba"] }
[package]
name = "opencc-jieba-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = { version = "0.7.0", features = ["tfidf", "textrank"] }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
lazy_static = "1.5.0"
