workspace = { members = [ "capi/opencc_jieba_capi", "tools/dict-generate","tools/opencc-clip-jieba", "tools/opencc-jieba"] }
[package]
name = "opencc-jieba-rs"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = { version = "0.7.3", features = ["tfidf", "textrank"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"
rayon = "1.10.0"
zstd = "0.13.3"

[profile.release]
opt-level = 3            # Maximize speed (better suited for C API performance)
codegen-units = 1          # Optimize across the entire codebase for better performance
lto = "fat"                # Full Link Time Optimization for improved binary performance
panic = "abort"            # Prevents Rust panics from unwinding, reducing binary size
#incremental = false        # Disable incremental builds to fully optimize the release binary
strip = "symbols"          # Strips debug symbols while retaining export symbols needed for the C API
debug = 0                  # No debug info in the final binary to reduce size
#crt-static = false         # Ensures the C runtime is linked dynamically (important for shared libraries)
