[workspace]
members = [
    "capi/opencc_jieba_capi",
    "tools/dict-generate",
    "tools/opencc-clip-jieba",
    "tools/opencc-jieba"
]

[package]
name = "opencc-jieba-rs"
version = "0.7.5"
edition = "2021"
authors = ["Laisuk Lai <laisuk@yahoo.com>"]
description = "High-performance Chinese text conversion and segmentation using Jieba and OpenCC-style dictionaries."
license = "MIT"
repository = "https://github.com/laisuk/opencc-jieba-rs"
homepage = "https://github.com/laisuk/opencc-jieba-rs"
documentation = "https://docs.rs/opencc-jieba-rs"
readme = "README.md"
keywords = ["chinese", "jieba", "opencc", "nlp", "text-processing"]
categories = ["text-processing", "internationalization", "command-line-utilities"]
include = [
    "src/**/*.rs",
    "src/dictionary_lib/dicts/*.zst",
    "Cargo.toml",
    "README.md",
    "MSRV-1.75.0-GUIDE.md",
    "/LICENSE"
]

[dependencies]
jieba-rs = { version = "=0.7", default-features = false, features = ["tfidf", "textrank"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

# Exact direct dependency pins to preserve behavior and Rust 2021/MSRV compatibility.
# Older toolchains may require a locked dependency graph; see MSRV-1.75.0-GUIDE.md.
rayon = "=1.10"
rayon-core = "=1.12"

# Keep include-flate at 0.3.0 for Edition 2021 / MSRV compatibility.
# Do not pin libflate directly; include-flate depends on libflate ^2.0,
# allowing modern toolchains to resolve newer libflate versions that avoid yanked core2.
include-flate = "=0.3.0"

[profile.release]
opt-level = 3              # Maximize speed (better suited for C API performance)
codegen-units = 1          # Optimize across the entire codebase
lto = "fat"                # Full Link Time Optimization
panic = "abort"            # Reduces binary size and prevents unwinding
strip = "symbols"          # Strips debug symbols, retains exportable C symbols
debug = 0                  # No debug info to minimize size
# crt-static = false       # Uncomment to link dynamically to C runtime if needed

[badges]
maintenance = { status = "actively-developed" }
