[package]
name = "opencc-jieba"
version = "0.7.3"
edition = "2021"

[dependencies]
opencc-jieba-rs = { path = "../.." }
clap = "4.5.60"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
regex = "1.12.2"
zip = { version = "=3.0.0", default-features = false, features = ["deflate"] }
#zip = "=3.0.0" # use 3.0.0 for Windows 7 (ructc 1.75.0)
#deranged = "=0.4.0"
#time = "=0.3.41"
