[package]
name = "opencc-jieba"
version = "0.7.5"
edition = "2021"

[dependencies]
opencc-jieba-rs = { path = "../.." }
clap = "=4.5"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
regex = "1.12"
zip = { version = "=3.0", default-features = false, features = ["deflate"] }
# Exact dependency pins to preserve MSRV (rustc 1.75.0):
# clap_lex@1.0.1
clap_lex = "=1.0"
#deranged = "=0.4.0"
#time = "=0.3.41"
